--- a/gitops/apps/home-assistant/configuration/scripts/power_on.yaml
+++ b/gitops/apps/home-assistant/configuration/scripts/power_on.yaml
@@ -1,6 +1,6 @@
 scheduled_light_on:
-  alias: Scheduled Light On (safe)
-  mode: restart
+  alias: "Scheduled Light On (safe)"
+  mode: "restart"
   fields:
     room_key: {}
     custom_schedule_enabled: { required: false }
@@ -52,7 +52,8 @@ scheduled_light_on:
 
         default_scene_entity_id: "scene.{{ room_key | default('') }}_{{ slot }}"
         scene_to_activate: "{{ _override_val if _override_val else default_scene_entity_id }}"
-        scene_exists: "{{ scene_to_activate in (states.scene | map(attribute='entity_id') | list) if scene_to_activate else false }}"
+        scene_exists: >-
+          {{ scene_to_activate in (states.scene | map(attribute='entity_id') | list) if scene_to_activate else false }}
 
         preferred_room_light: "light.{{ room_key | default('') }}"
         all_lights: "{{ states.light | map(attribute='entity_id') | list }}"
@@ -64,7 +65,7 @@ scheduled_light_on:
     - choose:
         - conditions: "{{ scene_exists }}"
           sequence:
-            - service: scene.turn_on
+            - service: "scene.turn_on"
               data:
                 transition: "{{ transition | default(0) }}"
               target:
@@ -73,16 +74,16 @@ scheduled_light_on:
         - choose:
             - conditions: "{{ dynamic_fallback != '' }}"
               sequence:
-                - service: light.turn_on
+                - service: "light.turn_on"
                   target:
                     entity_id: "{{ dynamic_fallback }}"
-                - service: logbook.log
+                - service: "logbook.log"
                   data:
                     name: "scheduled_light_on"
                     message: "Scene '{{ scene_to_activate }}' missing; used '{{ dynamic_fallback }}'"
                     entity_id: "{{ dynamic_fallback }}"
           default:
-            - service: logbook.log
+            - service: "logbook.log"
               data:
                 name: "scheduled_light_on"
                 message: "Scene '{{ scene_to_activate }}' missing; no fallback light entity available"
