--- a/gitops/apps/home-assistant/configuration/scripts/room_toggle.yaml
+++ b/gitops/apps/home-assistant/configuration/scripts/room_toggle.yaml
@@ -1,11 +1,11 @@
 room_toggle:
-  alias: Room Toggle (smart with debug)
-  mode: parallel
+  alias: "Room Toggle (smart with debug)"
+  mode: "parallel"
   fields:
     room_key:
-      description: Short name for the room (e.g., living_room)
+      description: "Short name for the room (e.g., living_room)"
     target_lights:
-      description: Entity or group to control (entity_id, list, or target)
+      description: "Entity or group to control (entity_id, list, or target)"
   sequence:
     - variables:
         _ids: >-
@@ -23,7 +23,7 @@ room_toggle:
           {% else %}
             {{ [] }}
           {% endif %}
-        
+
         # Check group state directly (for Hue groups that don't expand)
         group_on: >-
           {% if id_list | length == 1 %}
@@ -31,11 +31,11 @@ room_toggle:
           {% else %}
             {{ false }}
           {% endif %}
-        
+
         # Check member entities via expand (for normal groups)
         expanded: "{{ expand(id_list) }}"
         members_on: "{{ expanded | selectattr('state','eq','on') | list | count > 0 }}"
-        
+
         # Check member entities via state_attr (for Hue groups)
         attr_members: >-
           {% if id_list | length == 1 %}
@@ -44,35 +44,34 @@ room_toggle:
             {{ [] }}
           {% endif %}
         attr_members_on: "{{ expand(attr_members) | selectattr('state','eq','on') | list | count > 0 }}"
-        
+
         # Any method indicates lights are on
         any_on: "{{ group_on or members_on or attr_members_on }}"
-    
+
     # DEBUG: Log what we detected
-    - service: logbook.log
+    - service: "logbook.log"
       data:
         name: "room_toggle DEBUG"
         message: >-
-          id_list={{ id_list }}, group_on={{ group_on }}, 
-          members_on={{ members_on }}, attr_members_on={{ attr_members_on }}, 
+          id_list={{ id_list }}, group_on={{ group_on }},
+          members_on={{ members_on }}, attr_members_on={{ attr_members_on }},
           any_on={{ any_on }}
-    
     - choose:
         - conditions: "{{ any_on }}"
           sequence:
-            - service: logbook.log
+            - service: "logbook.log"
               data:
                 name: "room_toggle"
                 message: "Turning OFF {{ id_list }}"
-            - service: light.turn_off
+            - service: "light.turn_off"
               target:
                 entity_id: "{{ id_list }}"
       default:
-        - service: logbook.log
+        - service: "logbook.log"
           data:
             name: "room_toggle"
             message: "Turning ON {{ room_key }} via scheduled_light_on"
-        - service: script.scheduled_light_on
+        - service: "script.scheduled_light_on"
           data:
             room_key: "{{ room_key | default('') }}"
             fallback_lights: "{{ id_list[0] if id_list|length>0 else '' }}"
